Support the Java 11