@@ -74,19 +74,6 @@ tasks.withType(JavaCompile) {
     doFirst {
         sourceCompatibility = 11
         targetCompatibility = 11
-        options.compilerArgs = [
-                '--add-modules', 'java.se.ee',
-                '--add-exports', 'java.xml.bind/com.sun.istack.internal=ALL-UNNAMED'
-        ]
-    }
-}
-
-tasks.withType(Test) {
-    doFirst {
-        jvmArgs = [
-                '--add-modules', 'java.se.ee',
-                '-Djava.locale.providers=COMPAT,SPI',
-        ]
     }
 }
 
